[ADD] new structure html

--- a/crowdfunding-product-page-main/index.html
+++ b/crowdfunding-product-page-main/index.html
@@ -14,7 +14,7 @@
 
     <title>Crowdfunding product page - Mooenz</title>
   </head>
-  <body>
+  <body class="">
     <header class="header">
       <section class="nav">
         <img class="logo" src="./assets/svg/logo.svg" alt="" />
@@ -271,5 +271,6 @@
       </section>
     </section>
     <!-- Success modal end -->
+    <script src="./src/index.js" type="module" defer></script>
   </body>
 </html>
