--- a/qr-code-component-main/index.html
+++ b/qr-code-component-main/index.html
@@ -6,13 +6,13 @@
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <title>Mooenz - QR code component</title>
   <link rel="stylesheet" href="./styles.css">
+  <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
   <main class="main">
     <article class="card">
-      <div class="card__image">
-        <img src="./images/image-qr-code.png" alt="image QR code">
-      </div>
+      <img class="card__image" src="./images/image-qr-code.png" alt="image QR code">
+      
       <div class="card__content">
         <h1>Improve your front-end skills by building projects</h1>
         <p>Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
